tests/diagnostics/catalog/snapshots/ir/IR0002.snap
error[IR0002]: IR_E_AMBIGUOUS_NAME
 --> tests/diagnostics/catalog/sources/ir/IR0002.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0002
  = help: keep IR validation diagnostics structured and catalog-backed
